--- a/app/views/cards/display/preview/_bubble.html.erb
+++ b/app/views/cards/display/preview/_bubble.html.erb
@@ -10,16 +10,16 @@
     <svg viewBox="0 0 200 100">
       <path id="top-half" fill="transparent" d="M 20,100 A 80,80 0 0,1 180,100"/>
       <text text-anchor="middle" fill="currentColor">
-        <textPath href="#top-half" startOffset="50%" dominant-baseline="middle" data-bubble-target="entropyTop"></textPath>
+        <textPath href="#top-half" startOffset="50%" dominant-baseline="middle" data-bubble-target="top"></textPath>
       </text>
     </svg>
 
-    <span class="bubble__number" data-bubble-target="entropyDays"></span>
+    <span class="bubble__number" data-bubble-target="center"></span>
 
     <svg viewBox="0 0 200 100">
       <path id="bottom-half" d="M 20,0 A 80,80 0 0,0 180,0" fill="transparent"/>
       <text text-anchor="middle" fill="currentColor">
-        <textPath href="#bottom-half" startOffset="50%" dominant-baseline="middle" data-bubble-target="entropyBottom"></textPath>
+        <textPath href="#bottom-half" startOffset="50%" dominant-baseline="middle" data-bubble-target="bottom"></textPath>
       </text>
     </svg>
   </div>
@@ -28,16 +28,16 @@
     <svg viewBox="0 0 200 100">
       <path id="top-half" fill="transparent" d="M 20,100 A 80,80 0 0,1 180,100"/>
       <text text-anchor="middle" fill="currentColor">
-        <textPath href="#top-half" startOffset="50%" dominant-baseline="middle" data-bubble-target="entropyTop"></textPath>
+        <textPath href="#top-half" startOffset="50%" dominant-baseline="middle" data-bubble-target="top"></textPath>
       </text>
     </svg>
 
-    <span class="bubble__number" data-bubble-target="entropyDays"></span>
+    <span class="bubble__number" data-bubble-target="center"></span>
 
     <svg viewBox="0 0 200 100">
       <path id="bottom-half" d="M 20,0 A 80,80 0 0,0 180,0" fill="transparent"/>
       <text text-anchor="middle" fill="currentColor">
-        <textPath href="#bottom-half" startOffset="50%" dominant-baseline="middle" data-bubble-target="entropyBottom"></textPath>
+        <textPath href="#bottom-half" startOffset="50%" dominant-baseline="middle" data-bubble-target="bottom"></textPath>
       </text>
     </svg>
   </div>
